# ultraplonk_verifier

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  lcov.info
.cargo/: audit.toml
.github/workflows/: CI-ci-remote.yml  CI-coverage.yml  CI-rustdoc.yml
contracts/: contract.sol  ultraplonk_verifier.sol
src/: base_impl.rs  constants.rs  curvehooks_impl.rs  errors.rs  key.rs  lib.rs  macros.rs  proof.rs  resources.rs  should.rs  srs.rs  testhooks.rs  types.rs  utils.rs
tests/: noir-cli.rs
tests/generate_test_data/: Dockerfile  README.md  entrypoint.sh  generate_test_data.sh
tests/generate_test_data/hello_world/: Nargo.toml
