[package]
name = "test_conversion"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.4.0"
ark-serialize = "0.4.0"
ark-test-curves = "0.4.0"
ark-std = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
hex = "0.4.3"
hex-literal = "0.4.1"
snafu = { version = "0.8.3", default-features = false }
digest = { version = "0.10.7" }
sha3 = { version = "0.10.8", default-features = false }
clap = { version = "4.5.4", features = ["derive"], optional = true }
anyhow = { version = "1.0.86", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = { version = "0.19.0", default-features = false }
hex-literal = "0.4.1"
rand = "0.8.5"
divan = "0.1.11"
ciborium = "0.2.2"
hex = "0.4.3"
test_bin = "0.4.0"
tempfile = "3.10.1"

[features]
default = ["std"]
std = []