[package]
version = "0.1.0"
name = "ultraplonk-no-std"
authors = ["Horizen Labs <admin@horizenlabs.io>"]
repository = "https://github.com/zkVerify/ultraplonk_verifier"
homepage = "https://horizenlabs.io"
keywords = ["cryptography", "elliptic-curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-bn254-ext = { git = "https://github.com/zkVerify/accelerated-bn-cryptography.git", default-features = false }
ark-models-ext = { git = "https://github.com/zkVerify/accelerated-bn-cryptography.git", default-features = false }
test-utils = { git = "https://github.com/zkVerify/accelerated-bn-cryptography.git", default-features = false }
ark-bn254 = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-test-curves = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
sha3 = { version = "0.10.8", default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
default = ["std"]
std = []