[package]
version = "0.2.0"
name = "ultraplonk-no-std"
authors = ["Horizen Labs <admin@horizenlabs.io>"]
repository = "https://github.com/zkVerify/ultraplonk_verifier"
homepage = "https://horizenlabs.io"
keywords = ["cryptography", "elliptic-curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-bn254-ext = { git = "https://github.com/zkVerify/accelerated-bn-cryptography.git", default-features = false }
ark-models-ext = { git = "https://github.com/zkVerify/accelerated-bn-cryptography.git", default-features = false }
test-utils = { git = "https://github.com/zkVerify/accelerated-bn-cryptography.git", default-features = false }
ark-bn254 = { version = "0.4.0", default-features = false }
ark-ec = { version = "0.4.0", default-features = false }
ark-ff = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"], optional = true }
hex-literal = { version = "0.4.1", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
snafu = { version = "0.8.3", default-features = false }

# Dependencies for noir-cli:
anyhow = { version = "1.0.86", default-features = false, optional = true }
clap = { version = "4.5.4", features = ["derive"], optional = true }
regex = { version = "1", default-features = false, optional = true }
serde = { version = "1.0.197", default-features = false, features = [
    "derive",
], optional = true }
serde_json = { version = "1.0.114", optional = true }
thiserror = { version = "1.0.61", default-features = false, optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
rstest = { version = "0.19.0", default-features = false }

[[bin]]
name = "noir-cli"
path = "src/bin/noir_cli/main.rs"
required-features = ["bins"]

[features]
std = []
bins = [
    "dep:clap",
    "dep:hex",
    "dep:anyhow",
    "dep:thiserror",
    "dep:regex",
    "dep:serde_json",
    "dep:serde",
]

[package.metadata.cargo-udeps.ignore]
development = ["assert_cmd", "assert_fs", "predicates"]